feat: :sparkles: aprendiendo etiquetas semanticas

--- a/miPrimerArchivo.html
+++ b/miPrimerArchivo.html
@@ -1,5 +1,3 @@
-<p stile="color:aqua" >
- hola soy efrain
-</p>
+<p style="color: aqua">hola soy efrain</p>
 
-<img src="image.png" >
+<img src="image.png" />
